# rjungler

pkg/: DESCRIPTION  NAMESPACE  config.status  configure  configure.ac
pkg/R/: confusion.R  importance.R  init.R  init.R.in  rjungle.R
pkg/ab/: DESCRIPTION
pkg/ab/R/: impute.R  init.R  rjungle.R
pkg/ab/linux/: DESCRIPTION
pkg/ab/linux/man/: importance.Rd
pkg/ab/man/: Rjungle-package.Rd  confusion.Rd  importance.Rd  rjungle.Rd
pkg/ab/windows/: DESCRIPTION
pkg/data/: test.ped
pkg/demo/: 00Index  rjungleR.R
pkg/tests/: test1.R  test2.R  test3.R  test4.R  test5.R  test6.R
